--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
   <title>Finans</title>
 </head>
 <body>
-
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-warning">
       <div class="container">
         <a href="/" class="navbar-brand">
           <img src="assets/images/logo.png" alt="logo" width="142">
         </a>
-
+  
         <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
           <span class="navbar-toggler-icon"></span>
         </button>
-
+  
         <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -40,37 +39,44 @@
               <a href="/" class="nav-link">Preços</a>
             </li>
             <li class="nav-item">
-              <a href="/"class="btn btn-outline-light ml-4">Entrar</a>
+              <a href="/"class="btn btn-dark d-sm-none ml-md-4">Entrar</a>
+              <a href="/"class="btn btn-outline-light d-none d-sm-inline-block">Entrar</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-  </header>
+  </header>  
 
   <section id="home">
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex">
           <div class="align-self-center">
-            <h1 class="display-4">Suas contas, descomplicadas</h1>
+            <h1 class="display-6 display-md-4">Suas contas, descomplicadas</h1>
             <p>
-              Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar sua vida financeira.
+              Usado por mais de 1 milhão de pessoas, o Finans é uma
+              ferramenta online que vai facilitar sua vida financeira.
             </p>
-            <form class="mt-4 mb-4">
-              <div class="input-group input-group-lg">
-                <input type="text" placeholder="Seu email" class="form-control">
+            <form class="form-lg mt-4 mb-4">
+              <div class="input-group input-group-lg input-group-sm">
+                <input type="text" placeholder="Seu email" class="form-control col-10 col-sm-10 col-md-10">
                 <div class="input-group-append">
                   <button type="button" class="btn btn-primary">Cadastre-se</button>
                 </div>
               </div>
-            </form>
-            <p>Disponível para
-              <a href="/" class="btn btn-outline-light">
+            <p class="mt-2">Disponível para
+              <a href="/" class="btn btn-dark d-sm-none ml-md-4">
                 <i class="fab fa-android"></i>
               </a>
-              <a href="/" class="btn btn-outline-light">
+              <a href="/" class="btn btn-dark d-sm-none ml-md-4">
                 <i class="fab fa-apple"></i>
+              </a>
+              <a href="/" class="btn btn-outline-light d-none d-sm-inline-block">
+                <i class="fab fa-apple"></i>
+              </a>
+              <a href="/" class="btn btn-outline-light d-none d-sm-inline-block">
+                <i class="fab fa-android"></i>
               </a>
             </p>
           </div>
@@ -81,6 +87,116 @@
       </div>
     </div>
   </section>
+
+  <section class="sections">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 d-flex">
+          <div class="align-self-center">
+            <h2>Saiba para onde vai o seu dinheiro</h2>
+            <p>
+              Com o Finans, você categoriza todos os seus lançamentos.
+              Com gráficos simples, você sabe de onde vem e para onde vai
+              o seu dinheiro.
+            </p>
+            <a href="/" class="btn btn-primary">Veja mais</a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="align-self-center">
+            <img src="assets/images/saiba.png" alt="saiba-section" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="sections">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="align-self-center">
+            <img src="assets/images/juros.png" alt="juros-section" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-6 d-flex">
+          <div class="align-self-center">
+            <h2>Pare de pagar juros e economize</h2>
+            <p>
+              Manter as contas em dia é sempre um problema? O Finans
+              avisa você: receba alertas de contas a pagar e receber!
+            </p>
+            <a href="/" class="btn btn-primary">Veja mais</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="sections">
+    <div class="container">
+      <div class="row">
+       <div class="col-md-4">
+        <img src="assets/images/facil.png" alt="easy-section" class="img-fluid">
+          <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles
+              incríveis, essenciais para suas finanças. Simples como tem que ser!
+            </p>
+       </div> 
+       <div class="col-md-4">
+        <img src="assets/images/economize.png" alt="economize-section" class="img-fluid">
+          <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle e 
+              aproveite seu tempo com o que realmente importa pra você!
+            </p>
+       </div> 
+       <div class="col-md-4">
+        <img src="assets/images/suporte.png" alt="suporte-section" class="img-fluid">
+          <h4>Suporte amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A
+              gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!
+            </p>
+       </div> 
+      </div>
+    </div>
+  </section>
   
+  <footer class="mt-4 mb-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <p>
+            <a href="">Home</a>
+            <a href="">Recursos</a>
+            <a href="">Benefícios</a>
+            <a href="">Preços</a>
+          </p>
+        </div>
+        <div id="redes" class="col-md-4">
+          <a href="/" class="btn btn-dark d-sm-none">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="/" class="btn btn-dark d-sm-none">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="/" class="btn btn-outline-dark d-none d-sm-inline-block">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="/" class="btn btn-outline-dark d-none d-sm-inline-block">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="/" class="btn btn-dark d-sm-none">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="/" class="btn btn-outline-dark d-none d-sm-inline-block">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
